--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/Styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -208,7 +208,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <a class="logo" href="./index.html"
         >Web<span class="logo-footer">Studio</span></a
       >
